--- a/site/views/layouts/main.handlebars
+++ b/site/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Measdowlark Travel</title>
+	{{#if flash}}
+		<div class="alert alert-dismissible alert-{{flash.type}}">
+			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+			<strong>{{flash.intro}}</strong> {{{flash.message}}}
+		</div>
+	{{/if}}
 	{{#if showTests}}
 		<link rel="stylesheet" href="/vendor/mocha.css">
 	{{/if}}
